# GVirtuS

./: .gitignore  CITATION.cff  CITATIONS.md  CMakeLists.txt  Dockerfile  Makefile  README.md  STATUS.md  contributors.txt  entrypoint.sh  gvirtus-build-push.sh  gvirtus-run.sh  gvirtus-stop.sh  gvirtus-tests.sh
cmake/: GVirtuS.cmake  download_json.cmake  log4cplus.cmake
docker/: Dockerfile
docker/dev/: Dockerfile  build.sh  build_and_run.sh  build_and_test.sh  entrypoint.sh
docker/prod/: Dockerfile
docs/: buffer-mechanics.md  pointers.md
etc/: properties.json
examples/2d-human-parsing/: run.sh  setup.sh
examples/IMP_Test_CNN/: cnn_graph.cu  cnn_nograph.cu  frontend.sh
examples/accelerate-qwen3/: qwen.py  run.sh  setup.sh  simulation.py
examples/cudagraph_matrix-appln/: example  matrix_test.cu  matrix_test.sh  timing_output.csv
examples/deepspeed-qwen3/: qwen.py  run.sh  setup.sh
examples/distilbert/: distilbert.py  run.sh  setup.sh
examples/face-recognition/: cnn.py  extension.cu  run.sh  setup.sh
examples/fastapi-qwen3/: deploy.sh  deploy_gvirtus.sh  deploy_native.sh  model_server.py  multiprocess_requests.py  multirequest_model_server.py  query.sh  request.py  setup.sh
examples/opencv/: main  main.cu  run.sh
examples/opencv-yolo/: main.cu  run.sh  setup.sh
examples/openpose/: 00_test.cpp  run.sh  setup.sh
examples/phi3/: phi.py  run.sh  setup.sh
examples/python/: audit.c  distilbert.out  distilbert.py  fat_binary.cubin  printFuncs.py  run.sh  test.py  testing.out
examples/qwen3-14b/: qwen.py  run.sh  setup.sh
plugins/cublas/: CMakeLists.txt
plugins/cublas/backend/: CublasHandler.cpp  CublasHandler.h  CublasHandler_Extension.cpp  CublasHandler_Helper.cpp  CublasHandler_Level1.cpp  CublasHandler_Level2.cpp  CublasHandler_Level3.cpp  CublasHandler_Lt.cpp
plugins/cublas/frontend/: CublasFrontend.cpp  CublasFrontend.h  CublasLt.cpp  Cublas_extension.cpp  Cublas_helper.cpp  Cublas_level1.cpp  Cublas_level2.cpp  Cublas_level3.cpp
plugins/cudadr/: CMakeLists.txt
plugins/cudadr/backend/: CudaDrHandler.cpp  CudaDrHandler.h  CudaDrHandler_context.cpp  CudaDrHandler_device.cpp  CudaDrHandler_error.cpp  CudaDrHandler_event.cpp  CudaDrHandler_execution.cpp  CudaDrHandler_initialization.cpp  CudaDrHandler_memory.cpp  CudaDrHandler_module.cpp  CudaDrHandler_occupancy.cpp  CudaDrHandler_stream.cpp  CudaDrHandler_streammemory.cpp  CudaDrHandler_tensormap.cpp  CudaDrHandler_texture.cpp  CudaDrHandler_unified.cpp  CudaDrHandler_version.cpp  CudaDrHandler_virtmemory.cpp
plugins/cudadr/frontend/: CudaDr.h  CudaDrFrontend.cpp  CudaDrFrontend.h  CudaDr_context.cpp  CudaDr_device.cpp  CudaDr_error.cpp  CudaDr_event.cpp  CudaDr_execution.cpp  CudaDr_initialization.cpp  CudaDr_memory.cpp  CudaDr_module.cpp  CudaDr_occupancy.cpp  CudaDr_stream.cpp  CudaDr_streammemory.cpp  CudaDr_tensormap.cpp  CudaDr_texture.cpp  CudaDr_unified.cpp  CudaDr_version.cpp  CudaDr_virtmemory.cpp
plugins/cudadr/util/: CudaUtil.cpp  CudaUtil.h
plugins/cudart/: CMakeLists.txt
plugins/cudart/backend/: CudaRtHandler.cpp  CudaRtHandler.h  CudaRtHandler_api.cpp  CudaRtHandler_device.cpp  CudaRtHandler_driver_entry_point.cpp  CudaRtHandler_error.cpp  CudaRtHandler_event.cpp  CudaRtHandler_execution.cpp  CudaRtHandler_graph.cpp  CudaRtHandler_internal.cpp  CudaRtHandler_memory.cpp  CudaRtHandler_occupancy.cpp  CudaRtHandler_opengl.cpp  CudaRtHandler_profiler.cpp  CudaRtHandler_stream.cpp  CudaRtHandler_stream_memory.cpp  CudaRtHandler_surface.cpp  CudaRtHandler_texture.cpp  CudaRtHandler_thread.cpp  CudaRtHandler_version.cpp  cuda_runtime_compat.h  main.cpp
plugins/cudart/cuda_internals/: CudaRt_internal.h  __cudaFatFormat.h
plugins/cudart/demo/: CMakeLists.txt  dummy0.cu
plugins/cudart/frontend/: CudaRt.h  CudaRtFrontend.cpp  CudaRtFrontend.h  CudaRt_api.cpp  CudaRt_device.cpp  CudaRt_driver_entry_point.cpp  CudaRt_error.cpp  CudaRt_event.cpp  CudaRt_execution.cpp  CudaRt_graph.cpp  CudaRt_internal.cpp  CudaRt_memory.cpp  CudaRt_occupancy.cpp  CudaRt_opengl.cpp  CudaRt_profiler.cpp  CudaRt_stream.cpp  CudaRt_stream_memory.cpp  CudaRt_surface.cpp  CudaRt_texture.cpp  CudaRt_thread.cpp  CudaRt_version.cpp
plugins/cudart/util/: CudaUtil.cpp  CudaUtil.h
plugins/cudnn/: CMakeLists.txt
plugins/cudnn/backend/: CudnnHandler.cpp  CudnnHandler.h
plugins/cudnn/frontend/: Cudnn.cpp  CudnnFrontend.cpp  CudnnFrontend.h  Cudnn_helper.cpp
plugins/cufft/: CMakeLists.txt
plugins/cufft/backend/: CufftHandler.cpp  CufftHandler.h
plugins/cufft/frontend/: Cufft.cpp  Cufft.h  CufftFrontend.cpp  CufftFrontend.h
plugins/curand/: CMakeLists.txt
plugins/curand/backend/: CurandHandler.cpp  CurandHandler.h  CurandHandler_host.cpp
plugins/curand/frontend/: Curand.cpp  CurandFrontend.cpp  CurandFrontend.h
plugins/cusolver/: CMakeLists.txt
plugins/cusolver/backend/: CusolverHandler.cpp  CusolverHandler.h
plugins/cusolver/frontend/: Cusolver.cpp  CusolverFrontend.cpp  CusolverFrontend.h  Cusolver_helper.cpp
plugins/cusparse/: CMakeLists.txt
plugins/cusparse/backend/: CusparseHandler.cpp  CusparseHandler.h
plugins/cusparse/frontend/: Cusparse.cpp  CusparseFrontend.cpp  CusparseFrontend.h  Cusparse_helper.cpp
plugins/nvml/: CMakeLists.txt
plugins/nvml/backend/: NvmlHandler.cpp  NvmlHandler.h  NvmlHandler_devicequery.cpp  NvmlHandler_error.cpp  NvmlHandler_event.cpp  NvmlHandler_init.cpp  NvmlHandler_internal.cpp  NvmlHandler_systemquery.cpp
plugins/nvml/frontend/: NvmlFrontend.cpp  NvmlFrontend.h  Nvml_devicequery.cpp  Nvml_error.cpp  Nvml_event.cpp  Nvml_init.cpp  Nvml_internal.cpp  Nvml_systemquery.cpp
plugins/nvrtc/: CMakeLists.txt
plugins/nvrtc/backend/: NvrtcHandler.cpp  NvrtcHandler.h  NvrtcHandler_compilation.cpp  NvrtcHandler_error.cpp
plugins/nvrtc/frontend/: NvrtcFrontend.cpp  NvrtcFrontend.h  Nvrtc_compilation.cpp  Nvrtc_error.cpp  Nvrtc_giq.cpp  Nvrtc_host.cpp  Nvrtc_pch.cpp
tests/: CMakeLists.txt  test.cu  test_cublas.cu  test_cudadr.cu  test_cudart.cu  test_cudnn.cu  test_cufft.cu  test_curand.cu  test_cusolver.cu  test_cusparse.cu  test_nvrtc.cu
(+68 files in other folders)
